# cheminformatics

./: .dockerignore  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  environment.yml  multi-agent_chem_workflow_85a47944.plan.md  pyproject.toml
.github/workflows/: ci.yml
configs/: ci.yaml  dev_diffdock_ml_only.yaml  dev_fpocket.yaml  dev_mutation_openmm.yaml  dev_vina.yaml  dev_vina_fpocket.yaml  example.yaml
data/: library.csv
docker/: Dockerfile.cpu
src/workflow/: __init__.py  artifacts.py  cli.py  config_load.py  contracts.py  docking_run.py  fpocket_utils.py  logging_utils.py  obabel_resolve.py  pipeline.py  run_layout.py  smiles_utils.py  subprocess_runner.py
src/workflow/backends/: __init__.py  base.py  diffdock.py  factory.py  gnina.py  mock.py  vina.py
src/workflow/reporting/: __init__.py  plots.py
src/workflow/steps/: candidate_ranking.py  dock_pool_cap.py  docking_mutant.py  docking_wt.py  evolution.py  evolved_refilter.py  fpocket_parse.py  ligand_prep.py  openmm_mutate.py  pubchem.py  receptor_prep.py  tier_a.py  tier_b.py
src/workflow/validation/: __init__.py  ground_truth.py
tests/: conftest.py  test_config.py  test_diffdock_backend.py  test_dock_pool.py  test_docking_run.py  test_fpocket_step.py  test_ground_truth.py  test_ligand_prep.py  test_pipeline_smoke.py  test_pubchem.py  test_vina_backend.py
tests/fixtures/ground_truth/: benchmarks.yaml
tools/: obabel.cmd  obabel_cli.py
